--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -6,7 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".SecondFragment">
 
-
+    <TextView
+        android:id="@+id/tvCat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="some facts.."
+        app:layout_constraintBottom_toTopOf="@+id/ivCat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <ImageView
         android:id="@+id/ivCat"
         android:layout_width="match_parent"
